--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*
+########## OLD
 body{
 	background-color: white;/* #fff7ff; */
 }
@@ -15,31 +17,95 @@ p{
     margin: auto;
     padding: 0px;
 }
-/*
-ul{
-	list-style-type: none;
-    	margin: 0;
-	padding: 0;
-    	overflow: hidden;
-    	background-color: #ffe6ff;
-}
 
-li {
-    float: left;
-}
-
-li a{
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 16px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #f0b3ff;
-}
 */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 20px;
+}
+
+h1 {
+  text-align: center;
+}
+
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+}
+
+.navbar a {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.container .profile-image {
+  flex: 1;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.container .profile-image img {
+  width: 100%;
+  max-width: 300px;
+  border-radius: 50%;
+}
+
+.container .research-description {
+  flex: 1;
+  padding: 0 20px;
+}
+
+.container .research-description h2 {
+  margin-top: 0;
+}
+
+.container .research-description p {
+  margin-bottom: 20px;
+}
+
+.contact-info {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.contact-info a {
+  margin: 0 10px;
+  color: #333;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+  }
+
+  .container .profile-image {
+    margin-right: 20px;
+    margin-bottom: 0;
+  }
+
+  .container .research-description {
+    flex: 2;
+    padding: 0;
+  }
+}
 
 
 
