--- a/style.css
+++ b/style.css
@@ -1,51 +1,49 @@
-/*
-########## OLD
 body{
-	background-color: white;<!-- #fff7ff; -->
+	background-color: white;/* #fff7ff; */
+	font-family: Arial, sans-serif;
+  	margin: 0;
+  	padding: 20px;
 }
 
 a{
 	text-decoration:none;
 }
 
-p{
-	font-size:110%;
+a:link {
+  color: blue;
+  background-color: transparent;
+  text-decoration: none;
 }
-*/
+
+a:visited {
+  color: purple;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:active {
+  color: purple;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+p{
+	font-size:14px;
+}
+
+
 .overdiv{
     width: 60%;
     margin: auto;
     padding: 0px;
 }
 
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 20px;
-}
-
-h1 {
-  text-align: center;
-}
-
-.navbar {
-  background-color: #333;
-  overflow: hidden;
-}
-
-.navbar a {
-  float: left;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
 
 .container {
   display: flex;
@@ -63,19 +61,6 @@ h1 {
   width: 100%;
   max-width: 300px;
   border-radius: 50%;
-}
-
-.container .research-description {
-  flex: 1;
-  padding: 0 20px;
-}
-
-.container .research-description h2 {
-  margin-top: 0;
-}
-
-.container .research-description p {
-  margin-bottom: 20px;
 }
 
 .contact-info {
@@ -105,34 +90,3 @@ h1 {
     padding: 0;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
